--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,19 @@
 streamlit==1.38.0
 openai>=1.35.0
+
+# 文件处理
 python-docx==1.1.2
 pdfplumber==0.11.4
-python-dotenv==1.0.1
+
+# 语言识别
 langdetect>=1.0.9
+
+# 环境变量
+python-dotenv==1.0.1
+
+# Google Sheet 写入（推荐）
+gspread==6.0.2
+oauth2client==4.1.3
+
+# Slack 通知（推荐）
+slack_sdk==3.27.1
