--- a/requirements.txt
+++ b/requirements.txt
@@ -11,9 +11,9 @@ langdetect>=1.0.9
 # 环境变量
 python-dotenv==1.0.1
 
-# Google Sheet 写入（推荐）
+# Google Sheet 写入（必要）
 gspread==6.0.2
-oauth2client==4.1.3
+google-auth==2.37.0
 
-# Slack 通知（推荐）
+# Slack 通知
 slack_sdk==3.27.1
